src/objects/c2g__AllocScheduleLog__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpallocationscheduler</customHelpPage>
    <fields>
        <fullName>c2g__AllocScheduleRun__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allocation Schedule Run</label>
        <referenceTo>c2g__AllocScheduleRun__c</referenceTo>
        <relationshipLabel>Allocation Schedule Logs</relationshipLabel>
        <relationshipName>AllocationScheduleLogRuns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AllocSchedule__c</fullName>
        <label>Allocation Schedule</label>
        <referenceTo>c2g__AllocSchedule__c</referenceTo>
        <relationshipLabel>Allocation Schedule Logs</relationshipLabel>
        <relationshipName>AllocScheduleLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__IsLastRun__c</fullName>
        <defaultValue>true</defaultValue>
        <description>True if the object represents the most recent schedule execution.</description>
        <label>Is Last Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__LogType__c</fullName>
        <label>Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                    <default>true</default>
                    <label>Error</label>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Abort</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__RunDate__c</fullName>
        <label>Run Date</label>
        <type>DateTime</type>
    </fields>
    <label>Allocation Schedule Log</label>
    <nameField>
        <displayFormat>AS_L-{0}</displayFormat>
        <label>Allocation Schedule Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Schedule Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>